; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_SetPGVariable.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_SetPGVariable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PGC_SUSET = common dso_local global i32 0, align 4
@PGC_USERSET = common dso_local global i32 0, align 4
@PGC_S_SESSION = common dso_local global i32 0, align 4
@GUC_ACTION_LOCAL = common dso_local global i32 0, align 4
@GUC_ACTION_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SetPGVariable(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i8* @flatten_set_variable_args(i8* %8, i32* %9)
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call i64 (...) @superuser()
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32, i32* @PGC_SUSET, align 4
  br label %19

17:                                               ; preds = %3
  %18 = load i32, i32* @PGC_USERSET, align 4
  br label %19

19:                                               ; preds = %17, %15
  %20 = phi i32 [ %16, %15 ], [ %18, %17 ]
  %21 = load i32, i32* @PGC_S_SESSION, align 4
  %22 = load i32, i32* %6, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %19
  %25 = load i32, i32* @GUC_ACTION_LOCAL, align 4
  br label %28

26:                                               ; preds = %19
  %27 = load i32, i32* @GUC_ACTION_SET, align 4
  br label %28

28:                                               ; preds = %26, %24
  %29 = phi i32 [ %25, %24 ], [ %27, %26 ]
  %30 = call i32 @set_config_option(i8* %11, i8* %12, i32 %20, i32 %21, i32 %29, i32 1, i32 0, i32 0)
  ret void
}

declare dso_local i8* @flatten_set_variable_args(i8*, i32*) #1

declare dso_local i32 @set_config_option(i8*, i8*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @superuser(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
